| Bug #37876 | Importing Maria table from other server via binary copy does not work | ||
|---|---|---|---|
| Submitted: | 4 Jul 2008 14:06 | Modified: | 11 Jul 2008 8:58 |
| Reporter: | Guilhem Bichot | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Maria storage engine | Severity: | S3 (Non-critical) |
| Version: | 5.1-maria | OS: | Any |
| Assigned to: | Guilhem Bichot | CPU Architecture: | Any |
[4 Jul 2008 14:06]
Guilhem Bichot
[11 Jul 2008 8:58]
Guilhem Bichot
http://lists.mysql.com/maria/107 Thank you for your bug report. This issue has been committed to our source repository of that product and will be incorporated into the next release. If necessary, you can access the source repository and build the latest available version, including the bug fix. More information about accessing the source trees is available at http://dev.mysql.com/doc/en/installing-source.html
[24 Jul 2008 8:26]
Bugs System
Pushed into 6.0.7-alpha (revid:kpettersson@mysql.com-20080724082624-59z1hc8un6mxdb46) (pib:2)
[14 Sep 2008 2:33]
Bugs System
Pushed into 6.0.6-alpha (revid:guilhem@mysql.com-20080709090227-qunztd28udazvchw) (version source revid:hakan@mysql.com-20080716160135-l7310heud233kagu) (pib:3)
